# docker.netbox

./: .gitignore  .travis.yml  Makefile  README.md  copy-live-database.sh
netbox/src/netbox/: .gitattributes  .gitignore  .gitrepo  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  base_requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  upgrade.sh
netbox/src/netbox/.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-performance.yaml  04-documentation_change.yaml  05-translation.yaml  06-housekeeping.yaml  07-deprecation.yaml  08-feature_removal.yaml  config.yml
netbox/src/netbox/.github/codeql/: codeql-config.yml
netbox/src/netbox/.github/workflows/: ci.yml  claude-code-review.yml  claude-issue-triage.yml  claude.yml  close-incomplete-issues.yml  close-stale-issues.yml  codeql.yml  lock-threads.yml  update-translation-strings.yml
netbox/src/netbox/.tx/: config
netbox/src/netbox/contrib/: apache.conf  nginx.conf  uwsgi.ini
netbox/src/netbox/docs/: extra.css  index.md  introduction.md
netbox/src/netbox/docs/_theme/: main.html
netbox/src/netbox/docs/administration/: error-reporting.md  netbox-shell.md  permissions.md  replicating-netbox.md
netbox/src/netbox/docs/best-practices/: modeling-pluggable-transceivers.md  performance-handbook.md
netbox/src/netbox/docs/configuration/: data-validation.md  default-values.md  index.md  (+9 more)
netbox/src/netbox/netbox/: manage.py  release.yaml
netbox/src/netbox/scripts/: verify-bundles.sh  verify-openapi.sh
(+1756 files in other folders)
